# Game_Engine_Template

./: CMakeLists.txt
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
src/: main.cpp
testing_UI/: UI_RENDERER.cpp  UI_RENDERER.h  Uirenderer.glsl
